--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,8 +15,9 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: GRD COMANDO STATUS
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This shows the uptime of various services hosted on the GRD COMANDO server
+  theme: ocean
+  introTitle: "This shows the uptime of various services hosted on the GRD COMANDO server."
+  introMessage: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   navbar:
     - title: Home
       href: /
