--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,11 @@ owner: tekunikaru # Your GitHub organization or username, where this repository 
 repo: grd-comando-status # The name of this repository
 
 sites:
+  - name: Routes
+    url: https://www.cloudflarestatus.com/api/v2/components.json
+    __dangerous__body_degraded: '"name":"Tunnel","status":"degraded_performance"'
+    __dangerous__body_down_if_text_missing: '"name":"Tunnel","status":"operational"'
+    icon: https://icons.duckduckgo.com/ip3/www.cloudflarestatus.com.ico
   - name: HEXANE API
     url: https://uvr.gaino.group
   - name: Heber Animes
@@ -14,15 +19,15 @@ status-website:
   cname: status.gaino.group
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: GRD COMANDO STATUS
+  name: Service Status
   theme: ocean
-  introTitle: "This shows the uptime of various services hosted on the GRD COMANDO server."
-  introMessage: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  introTitle: "GRD COMANDO Status"
+  introMessage: "This shows the uptime of various services hosted on the GRD COMANDO server."
   navbar:
-    - title: Home
+    - title: GRD
       href: /
-    - title: gaino.group
-      href: https://gaino.group
+    - title: NOVAERO
+      href: https://status.novaero.com.br
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
