--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,10 @@ owner: tekunikaru # Your GitHub organization or username, where this repository 
 repo: grd-comando-status # The name of this repository
 
 sites:
-  - name: Routes
+  - name: Tunnel
     url: https://www.cloudflarestatus.com/api/v2/components.json
-    __dangerous__body_degraded: '"name":"Tunnel","status":"degraded_performance"'
-    __dangerous__body_down_if_text_missing: '"name":"Tunnel","status":"operational"'
+    __dangerous__body_degraded_if_text_missing: '"name":"Tunnel","status":"operational"'
+    __dangerous__body_down: '"name":"Tunnel","status":"major_outage"'
     icon: https://icons.duckduckgo.com/ip3/www.cloudflarestatus.com.ico
   - name: HEXANE API
     url: https://uvr.gaino.group
